// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`valid read tests basic atoms 1`] = `
Object {
  "_type": "SAtom",
  "val": "abc",
}
`;

exports[`valid read tests basic atoms 2`] = `
Object {
  "_type": "SAtom",
  "val": "abc->def",
}
`;

exports[`valid read tests basic booleans 1`] = `
Object {
  "_type": "SBoolean",
  "val": true,
}
`;

exports[`valid read tests basic booleans 2`] = `
Object {
  "_type": "SBoolean",
  "val": false,
}
`;

exports[`valid read tests basic cons 1`] = `
Object {
  "_type": "SList",
  "_variant": 0,
  "x": Object {
    "_type": "SAtom",
    "val": "a",
  },
  "y": Object {
    "_type": "SAtom",
    "val": "b",
  },
}
`;

exports[`valid read tests basic cons 2`] = `
Object {
  "_type": "SList",
  "_variant": 0,
  "x": Object {
    "_type": "SAtom",
    "val": "a",
  },
  "y": Object {
    "_type": "SList",
    "_variant": 0,
    "x": Object {
      "_type": "SAtom",
      "val": "b",
    },
    "y": Object {
      "_type": "SAtom",
      "val": "c",
    },
  },
}
`;

exports[`valid read tests basic lists 1`] = `
Object {
  "_type": "SNil",
}
`;

exports[`valid read tests basic lists 2`] = `
Object {
  "_type": "SList",
  "_variant": 0,
  "x": Object {
    "_type": "SAtom",
    "val": "abc",
  },
  "y": Object {
    "_type": "SNil",
  },
}
`;

exports[`valid read tests basic lists 3`] = `
Object {
  "_type": "SList",
  "_variant": 0,
  "x": Object {
    "_type": "SAtom",
    "val": "abc",
  },
  "y": Object {
    "_type": "SList",
    "_variant": 0,
    "x": Object {
      "_type": "SNumber",
      "val": 123,
    },
    "y": Object {
      "_type": "SNil",
    },
  },
}
`;

exports[`valid read tests basic lists 4`] = `
Object {
  "_type": "SList",
  "_variant": 0,
  "x": Object {
    "_type": "SAtom",
    "val": "abc",
  },
  "y": Object {
    "_type": "SList",
    "_variant": 0,
    "x": Object {
      "_type": "SNumber",
      "val": 123,
    },
    "y": Object {
      "_type": "SList",
      "_variant": 0,
      "x": Object {
        "_type": "SBoolean",
        "val": true,
      },
      "y": Object {
        "_type": "SNil",
      },
    },
  },
}
`;

exports[`valid read tests basic numbers 1`] = `
Object {
  "_type": "SNumber",
  "val": 123,
}
`;

exports[`valid read tests basic numbers 2`] = `
Object {
  "_type": "SNumber",
  "val": 123.5,
}
`;

exports[`valid read tests basic parens 1`] = `
Object {
  "_type": "SNil",
}
`;

exports[`valid read tests basic parens 2`] = `
Object {
  "_type": "SNil",
}
`;

exports[`valid read tests basic parens 3`] = `
Object {
  "_type": "SNil",
}
`;

exports[`valid read tests basic quotes 1`] = `
Object {
  "_type": "SList",
  "_variant": 0,
  "x": Object {
    "_type": "SAtom",
    "val": "quote",
  },
  "y": Object {
    "_type": "SList",
    "_variant": 0,
    "x": Object {
      "_type": "SNil",
    },
    "y": Object {
      "_type": "SNil",
    },
  },
}
`;

exports[`valid read tests basic quotes 2`] = `
Object {
  "_type": "SList",
  "_variant": 0,
  "x": Object {
    "_type": "SList",
    "_variant": 0,
    "x": Object {
      "_type": "SAtom",
      "val": "quote",
    },
    "y": Object {
      "_type": "SList",
      "_variant": 0,
      "x": Object {
        "_type": "SAtom",
        "val": "abc",
      },
      "y": Object {
        "_type": "SNil",
      },
    },
  },
  "y": Object {
    "_type": "SNil",
  },
}
`;

exports[`valid read tests basic quotes 3`] = `
Object {
  "_type": "SList",
  "_variant": 0,
  "x": Object {
    "_type": "SAtom",
    "val": "quote",
  },
  "y": Object {
    "_type": "SList",
    "_variant": 0,
    "x": Object {
      "_type": "SList",
      "_variant": 0,
      "x": Object {
        "_type": "SAtom",
        "val": "abc",
      },
      "y": Object {
        "_type": "SNil",
      },
    },
    "y": Object {
      "_type": "SNil",
    },
  },
}
`;

exports[`valid read tests basic quotes 4`] = `
Object {
  "_type": "SList",
  "_variant": 0,
  "x": Object {
    "_type": "SAtom",
    "val": "quote",
  },
  "y": Object {
    "_type": "SList",
    "_variant": 0,
    "x": Object {
      "_type": "SList",
      "_variant": 0,
      "x": Object {
        "_type": "SAtom",
        "val": "abc",
      },
      "y": Object {
        "_type": "SAtom",
        "val": "def",
      },
    },
    "y": Object {
      "_type": "SNil",
    },
  },
}
`;

exports[`valid read tests basic quotes 5`] = `
Object {
  "_type": "SList",
  "_variant": 0,
  "x": Object {
    "_type": "SAtom",
    "val": "quote",
  },
  "y": Object {
    "_type": "SList",
    "_variant": 0,
    "x": Object {
      "_type": "SList",
      "_variant": 0,
      "x": Object {
        "_type": "SAtom",
        "val": "quote",
      },
      "y": Object {
        "_type": "SList",
        "_variant": 0,
        "x": Object {
          "_type": "SList",
          "_variant": 0,
          "x": Object {
            "_type": "SAtom",
            "val": "abc",
          },
          "y": Object {
            "_type": "SNil",
          },
        },
        "y": Object {
          "_type": "SNil",
        },
      },
    },
    "y": Object {
      "_type": "SNil",
    },
  },
}
`;

exports[`valid read tests basic quotes 6`] = `
Object {
  "_type": "SList",
  "_variant": 0,
  "x": Object {
    "_type": "SAtom",
    "val": "quote",
  },
  "y": Object {
    "_type": "SList",
    "_variant": 0,
    "x": Object {
      "_type": "SList",
      "_variant": 0,
      "x": Object {
        "_type": "SList",
        "_variant": 0,
        "x": Object {
          "_type": "SAtom",
          "val": "quote",
        },
        "y": Object {
          "_type": "SList",
          "_variant": 0,
          "x": Object {
            "_type": "SAtom",
            "val": "abc",
          },
          "y": Object {
            "_type": "SNil",
          },
        },
      },
      "y": Object {
        "_type": "SNil",
      },
    },
    "y": Object {
      "_type": "SNil",
    },
  },
}
`;
